--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ body {/*배경*/
     justify-content: space-around;
     padding: 20px;
 }
-
 .button {/*버튼 */
     width: 80px; 
     height: 80px; 
@@ -44,4 +43,30 @@ body {/*배경*/
     border: 1px solid #000;
     border-radius: 5px;
     cursor: pointer;
+}
+.screen3 {/*데스크탑 메인 화면*/
+    width: 130vh; 
+    height: 80vh;
+    background-color: #ccc;
+    border: 1px solid #000;
+    border-top-left-radius: 20px; 
+    border-top-right-radius: 20px; 
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding: 20px;
+}
+.screen4 {/*데스크탑 작업표시줄*/
+    width: 130vh; 
+    height: 10vh;
+    background-color: #0f0f0f;
+    border: 1px solid #000;
+    border-bottom-left-radius: 20px; 
+    border-bottom-right-radius: 20px; 
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding: 20px;
 }
