--- a/style.css
+++ b/style.css
@@ -44,6 +44,34 @@ body {/*배경*/
     border-radius: 5px;
     cursor: pointer;
 }
+.search {/*검색 프로그램 버튼*/
+    width: 80px; 
+    height: 80px; 
+    margin: 10px;
+    font-size: 18px;
+    background-color: #eee;
+    color: black;
+    bottom: 650px;
+    right: 240px;
+    position: relative;
+    border: 1px solid #000;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.trash {/*휴지통 버튼*/
+    width: 80px; 
+    height: 80px; 
+    margin: 10px;
+    font-size: 18px;
+    background-color: #eee;
+    color: black;
+    bottom: 530px;
+    right: 855px;
+    position: relative;
+    border: 1px solid #000;
+    border-radius: 5px;
+    cursor: pointer;
+}
 .screen3 {/*데스크탑 메인 화면*/
     width: 130vh; 
     height: 80vh;
@@ -59,12 +87,43 @@ body {/*배경*/
 }
 .screen4 {/*데스크탑 작업표시줄*/
     width: 130vh; 
-    height: 10vh;
+    height: 70px;
     background-color: #0f0f0f;
     border: 1px solid #000;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.08) inset;
     border-bottom-left-radius: 20px; 
     border-bottom-right-radius: 20px; 
     display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.search_scr {/*데스크탑 검색창*/
+    width: 700px;
+    height: 654px;
+    background: rgba(17, 17, 17, 0.81);
+    border: 1px solid #000;
+    border-radius: 20px;
+    display: flex;
+    bottom: 80px;
+    right: 264px;
+    position: relative;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding: 20px;
+}
+.search_bar {/*데스크탑 검색바*/
+    width: 580px;
+    height: 55px;
+    border: 1px solid #000;
+    border-radius: 60px;
+    background: #767676;
+    display: flex;
+    bottom: 200px;
+    position: relative;
     flex-direction: row;
     align-items: flex-end;
     justify-content: space-around;
