--- a/web-O-main/style.css
+++ b/web-O-main/style.css
@@ -124,8 +124,9 @@ body {/*배경*/
     background: #767676;
     display: flex;
     bottom: 200px;
+    right: 40px;
     position: relative;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-end;
     justify-content: space-around;
     padding: 20px;
@@ -161,4 +162,34 @@ body {/*배경*/
     align-items: flex-start;
     justify-content: space-around;
     padding: 20px;
+}
+
+.qbutton {/*quit버튼 */
+    width: 50px; 
+    height: 51px; 
+    margin: 10px;
+    font-size: 18px;
+    background-color: #eee;
+    color: black;
+    border: 1px solid #000;
+    border-radius: 5px;
+    bottom: 20px;
+    left: 620px;
+    position: relative;
+    cursor: pointer;
+}
+
+.qbutton_search {/*search quit버튼 */
+    width: 50px; 
+    height: 51px; 
+    margin: 10px;
+    font-size: 18px;
+    background-color: #eee;
+    color: black;
+    border: 1px solid #000;
+    border-radius: 5px;
+    bottom: 590px;
+    left: 625px;
+    position: relative;
+    cursor: pointer;
 }
