--- a/style.css
+++ b/style.css
@@ -167,9 +167,8 @@ body {/*배경*/
 .qbutton {/*quit버튼 */
     width: 50px; 
     height: 51px; 
-    margin: 10px;
     font-size: 18px;
-    background-color: #eee;
+    background-color: #161515;
     color: black;
     border: 1px solid #000;
     border-radius: 5px;
@@ -182,7 +181,6 @@ body {/*배경*/
 .qbutton_search {/*search quit버튼 */
     width: 50px; 
     height: 51px; 
-    margin: 10px;
     font-size: 18px;
     background-color: #eee;
     color: black;
@@ -191,5 +189,16 @@ body {/*배경*/
     bottom: 590px;
     left: 625px;
     position: relative;
+    cursor: pointer;
+}
+
+.filebutton{
+    width: 70px; 
+    height: 70px; 
+    font-size: 18px;
+    background-color: #eee;
+    color: black;
+    border: 1px solid #000;
+    border-radius: 5px;
     cursor: pointer;
 }
