--- a/style.css
+++ b/style.css
@@ -49,12 +49,12 @@ body {/*배경*/
     height: 80px; 
     margin: 10px;
     font-size: 18px;
-    background-color: #eee;
+    background-color: #ccc;
     color: black;
-    bottom: 650px;
-    right: 240px;
-    position: relative;
-    border: 1px solid #000;
+    position: fixed;
+    bottom: 580px;
+    left: 280px;
+    border: 1px solid #ccc;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -63,12 +63,27 @@ body {/*배경*/
     height: 80px; 
     margin: 10px;
     font-size: 18px;
-    background-color: #eee;
+    background-color: #ccc;
     color: black;
-    bottom: 530px;
-    right: 858px;
-    position: relative;
-    border: 1px solid #000;
+    position: fixed;
+    bottom: 480px;
+    left: 280px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.go_phone {/*핸드폰 화면으로 이동 버튼*/
+    width: 80px; 
+    height: 80px; 
+    margin: 10px;
+    font-size: 18px;
+    background-color: #ccc;
+    color: black;
+    position: fixed;
+    bottom: 120px;
+    right: 265px;
+    border: 1px solid #ccc;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -101,15 +116,13 @@ body {/*배경*/
 }
 
 .search_scr {/*데스크탑 검색창*/
-    width: 700px;
-    height: 654px;
+    width: 130vh;
+    height: 80vh;
     background: rgba(17, 17, 17, 0.81);
     border: 1px solid #000;
-    border-radius: 20px;
+    border-top-left-radius: 20px; 
+    border-top-right-radius: 20px;
     display: flex;
-    bottom: 80px;
-    right: 264px;
-    position: relative;
     flex-direction: row;
     align-items: flex-end;
     justify-content: space-around;
@@ -123,9 +136,8 @@ body {/*배경*/
     border-radius: 60px;
     background: #767676;
     display: flex;
-    bottom: 200px;
-    right: 40px;
-    position: relative;
+    position: fixed;
+    bottom: 300px;
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-around;
@@ -134,14 +146,14 @@ body {/*배경*/
 
 .trash_scr {/*데스크탑 쓰레기통*/
     width: 700px;
-    height: 654px;
+    height: 500px;
     background: rgba(17, 17, 17, 0.81);
     border: 1px solid #000;
     border-radius: 20px;
     display: flex;
-    bottom: 80px;
-    right: 264px;
-    position: relative;
+    position: fixed;
+    bottom: 167px;
+    left: 264px;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
@@ -182,17 +194,17 @@ body {/*배경*/
     width: 50px; 
     height: 51px; 
     font-size: 18px;
-    background-color: #eee;
-    color: black;
-    border: 1px solid #000;
+    background-color: rgba(17, 17, 17, 0.81);
+    border: 1px solid rgba(17, 17, 17, 0.81);
     border-radius: 5px;
-    bottom: 590px;
-    left: 625px;
     position: relative;
+    left: 400px;
+    bottom: 500px;
     cursor: pointer;
 }
 
-.filebutton{
+
+.filebutton{ /*파일 확인 버튼 */
     width: 70px; 
     height: 70px; 
     font-size: 18px;
@@ -211,7 +223,7 @@ body {/*배경*/
     color: black;
     border: 1px solid #000;
     border-radius: 5px;
-    left: 570px;
-    position: relative;
+    position:fixed;
+    right:280px;
     cursor: pointer;
 }
